@@ -40,6 +40,11 @@ check_PROGRAMS += simple-1
 simple_1_SOURCES = simple-1.cc $(COMMON_SOURCES)
 simple_1_LDADD = $(ROBOPTIMCORE_LIBS)
 
+# Simple 2
+check_PROGRAMS += simple-2
+simple_2_SOURCES = simple-2.cc $(COMMON_SOURCES)
+simple_2_LDADD = $(ROBOPTIMCORE_LIBS)
+
 # Optimization problem 1
 check_PROGRAMS += optimization-problem-1
 optimization_problem_1_SOURCES = optimization-problem-1.cc $(COMMON_SOURCES)
@@ -70,5 +75,6 @@ generate-reference:
 EXTRA_DIST +=					\
 	simple.stdout				\
 	simple-1.stdout				\
+	simple-2.stdout				\
 	plugin.stdout				\
 	optimization-problem-1.stdout
