@@ -1,0 +1,74 @@
+Problem:
+  \sum_i x_i (derivable function)
+  Argument's bounds: (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf)
+  Argument's scales: 1, 1, 1, 1, 1, 1, 1, 1
+  Number of constraints: 8
+  Constraint 0
+      Numeric linear function
+        A = [1,8]((3,0,0,0,0,0,0,0))
+        B = [1](2)
+      Bounds: (4, inf)
+      Scales: 1
+      
+  Constraint 1
+      Numeric linear function
+        A = [1,8]((0,-3,0,0,0,0,0,0))
+        B = [1](2)
+      Bounds: (-inf, 6)
+      Scales: 1
+      
+  Constraint 2
+      Numeric linear function
+        A = [1,8]((0,0,3,0,0,0,0,0))
+        B = [1](2)
+      Bounds: (8, 8)
+      Scales: 1
+      
+  Constraint 3
+      Numeric linear function
+        A = [1,8]((0,0,0,3,0,0,0,0))
+        B = [1](2)
+      Bounds: (-10, 10)
+      Scales: 1
+      
+  Constraint 4
+      -.5 * x_4^2 (derivable function)
+      Bounds: (-12, inf)
+      Scales: 1
+      
+  Constraint 5
+      .5 * x_5^2 (derivable function)
+      Bounds: (-inf, 14)
+      Scales: 1
+      
+  Constraint 6
+      .5 * x_6^2 (derivable function)
+      Bounds: (16, 16)
+      Scales: 1
+      
+  Constraint 7
+      .5 * x_7^2 (derivable function)
+      Bounds: (-18, 18)
+      Scales: 1
+      
+  No starting point.
+  Infinity value (for all functions): inf
+CFSQP specific variables: 
+  Nineq: 10
+  Nineqn: 5
+  Neq: 2
+  Neqn: 1
+  Mode: 100
+  Iprint: 0
+  Miter: 500
+  Bigbnd: 1e+10
+  Eps: 1e-08
+  Epseqn: 1e-08
+  Udelta: 1e-08
+  CFSQP constraints: (4, 1), (5, 1), (5, 0), (7, 1), (7, 0), (0, 1), (1, 1), (1, 0), (3, 1), (3, 0), (6, 1), (2, 1)
+Result: 
+    Size (input, output): 8, 1
+    X: [8](0.666667,-1.33333,2,-4,-4.89898,-5.2915,-5.65685,-6)
+    Value: [1](-24.514)
+    Constraints values: [8](4,6,8,-10,-12,14,16,18)
+    Lambda: [12](0,0.188982,0,0.166667,0.333333,0,0.333333,0.333333,0,0.176777,-0.333333,1)
