@@ -34,7 +34,8 @@ AT_BANNER([Plugin])
 CHECK_STDOUT([plugin], [Instantiate the solver as a plug-in.])
 
 AT_BANNER([Optimization problems])
-CHECK_STDOUT([simple-1], [Solve a simple problem using linear constraints.])
+CHECK_STDOUT([simple-1], [Solve a problem using linear constraints.])
+CHECK_STDOUT([simple-2], [Solve a problem using linear and non-linear constraints.])
 CHECK_STDOUT([optimization-problem-1], [Optimization problem one.])
 
 # End of testsuite.at
